--- a/CSS Grid(Day-2)/Example-1/eg1.css
+++ b/CSS Grid(Day-2)/Example-1/eg1.css
@@ -54,7 +54,7 @@
 }
 
 .items{
-    background-color: greenyellow;
+    border:2px solid blue;
     margin:10px;
     padding:10px;
     display: flex;
