--- a/Nav and Header layout(Day-3)/styles.css
+++ b/Nav and Header layout(Day-3)/styles.css
@@ -60,7 +60,7 @@ header{
 }
 
 header div{
-    /*border: 2px solid chartreuse;*/
+    border: 2px solid chartreuse;
     margin: 10px;
     color:white
 }
@@ -77,6 +77,7 @@ header div{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 0.25fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    overflow:hidden;
 }
 
 .java{
@@ -93,15 +94,13 @@ header div{
     grid-column: 3/6;
 }
 .skills{
-    /*border: 2px solid greenyellow;*/
+    border: 2px solid greenyellow;        
     background-color:rgb(128, 128, 128);
     margin:10px;
-    color:white
+    color:white;
 }
 
-.skills img{
-    padding-left: 100px;
-}
+
 .skills h1{
     padding-left: 140px;
 }
